<resources>
    <string name="app_name">Stego</string>
    <string name="heading">Steganography is the technique of hiding information within other data, like images or audio, to conceal its presence while maintaining the appearance of the original file.</string>
    <string name="info_button">info</string>
    <string name="Encode">Encode text in image</string>
    <string name="Encode_01">Encode image in image</string>
    <string name="Decode">Decode image from image</string>
    <string name="Decode_2">Decode text from image</string>
    <string name="Decode_img">Decoded Image will appear below</string>
    <string name="Decode_text">Decoded text will appear here</string>
    <string name="instructions_heading">📌How to Use the Steganography Tool App</string>

    <string name="app_features">Features:\n✅ Convert text into images\n✅ Convert one image into another\n✅ Decode hidden messages from images</string>

    <string name="encode_text">Encoding (Hiding Text into an Image):\n1. Open the app and navigate to the Text-to-Image section.\n2. Enter the secret text message you want to hide.\n3. Select an image where you want to hide the text.\n4. Click the "Encode" button.\n5. Save or share the encoded image.</string>

    <string name="encode_image">Encoding (Hiding One Image Inside Another):\n1. Open the app and go to the Image-to-Image section.\n2. Select the cover image (the visible image).\n3. Select the hidden image (the one to be encoded inside).\n4. Click the "Encode" button.\n5. Save or share the encoded image.</string>

    <string name="decode_instructions">Decoding (Extracting Hidden Data):\n1. Open the app and navigate to the Decode section.\n2. Select the steganographic image that contains hidden data.\n3. Click the "Decode" button.\n4. If the image contains hidden text, it will be displayed.\n5. If the image contains another hidden image, it will be extracted and shown.</string>

    <string name="disclaimer">⚠️ Disclaimer:\n🛑 This app is created for educational purposes only.\n🚫 Do NOT use this app for any illegal activities, hacking, or spreading malware.\n💡 We are NOT responsible for any misuse of this tool. Use it at your own risk.\n🔒 The purpose of this app is to understand steganography, cryptography, and data security.</string>

    <string name="Encode_">Enter text to encode</string>

    <string name="select_image">Select Image</string>
    <string name="enter_text_hint">Enter text to encode</string>
    <string name="encode_text_">Encode Text</string>
    <string name="selected_image">Selected Image</string>
    <string name="decrypt_text">decrypt</string>
    <string name="decoded_text_placeholder">Decoded text will appear here</string>
    <string name="decoded_image">Decoded Image</string>


</resources>